Fix alignment of topics page and prepare for css refactor

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -660,7 +660,7 @@ li.govuk-tabs__list-item {
     }
   }
 
-  main#main-content.xpl-home {
+  main#main-content.xpl-page {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
